delete reduplicated title

--- a/content/交易/苏宁易购技术分析+量子通讯[20200630].md
+++ b/content/交易/苏宁易购技术分析+量子通讯[20200630].md
@@ -3,27 +3,27 @@ title: "苏宁易购技术分析+量子通讯[20200630]"
 date: 2020-06-30T22:17:25+08:00
 draft: false
 ---
-# 苏宁易购技术分析
+## 苏宁易购技术分析
 
-## 月线图（对数）：
+### 月线图（对数）：
 
 2018年7月跌破长期上升趋势线，之后回测并继续下跌至今，并有明显的下降趋势线。技术上无止跌迹象。
 
 ![月线-对数坐标.png](/img/2020-06-30-苏宁易购-月线-对数坐标.png)
 
-## 月线图：
+### 月线图：
 
 已沿下跌趋势线跌到长期上升趋势线附近，尚无止跌迹象。
 
 ![月线.png](/img/2020-06-30-苏宁易购-月线.png)
 
-## 周线图：
+### 周线图：
 
 2017年5月至2018年6月的上涨结构显示，最终推进到100%处行情终止。此后至今的下跌结构测算得到推进100%处价格与长期上升趋势线基本重合，价格为8.13元。
 
 ![周线.png](/img/2020-06-30-苏宁易购-周线.png)
 
-## 日线图：
+### 日线图：
 
 日线图上看出下跌推进100%与长期上升趋势线重合处，出现了价格反弹，但目前遇到日线级别的下降趋势线，不建议操作。
 
@@ -38,7 +38,7 @@ draft: false
 
 ---
 
-# 量子通讯
+## 量子通讯
 
 之前看金灿荣的视频跳的大神整理如下：
 
