--- a/content/交易/交易方法为什么重要.md
+++ b/content/交易/交易方法为什么重要.md
@@ -1,9 +1,10 @@
 ---
-title: "交易方法为什么重要"
+title: "交易方法为什么重要【译】"
 date: 2020-05-17T21:42:34+08:00
 draft: false
 ---
-https://www.forexfactory.com/showthread.php?t=4108
+原作：[Why a "Trading Method" is important](https://www.forexfactory.com/showthread.php?t=4108)
+
 ---
 
 打个比方。
