--- a/content/交易/比特币价格与美国每日新增确诊病例数.md
+++ b/content/交易/比特币价格与美国每日新增确诊病例数.md
@@ -4,12 +4,6 @@ date: 2020-12-20T19:20:52+08:00
 draft: false
 ---
 
-[Daily New Cases in the United States - Worldometer](https://www.worldometers.info/coronavirus/country/us/)
-
-[Coronavirus in the U.S.: Latest Map and Case Count - NYTimes](https://www.nytimes.com/interactive/2020/us/coronavirus-us-cases.html)
-
-[Coronavirus (COVID-19) charts and stats - TradingView](https://www.tradingview.com/covid19/)
-
 TradingView 添加以下自定义指标，可以在日线图上比较比特币与美国每日新增新冠确诊病例数趋势的关系（可以自行调节偏移量）。
 
 ``` javascript
@@ -42,3 +36,11 @@ plot(daily_new_case, title="daily new cases", color=color.orange, offset=os)    
 ~~每日新增病例数也许能反应美国佬的紧张（或者亢奋？）程度，群体心理。~~
 
 **今年已经有太多新冠阳性，希望疫情尽快得到控制，每天都是阴线。**
+
+---
+
+参考：
+
+- [Daily New Cases in the United States - Worldometer](https://www.worldometers.info/coronavirus/country/us/)
+- [Coronavirus in the U.S.: Latest Map and Case Count - NYTimes](https://www.nytimes.com/interactive/2020/us/coronavirus-us-cases.html)
+- [Coronavirus (COVID-19) charts and stats - TradingView](https://www.tradingview.com/covid19/)
