--- a/content/交易/比特币价格与美国每日新增确诊病例数.md
+++ b/content/交易/比特币价格与美国每日新增确诊病例数.md
@@ -27,7 +27,7 @@ plot(daily_new_case, title="daily new cases", color=color.orange, offset=os)    
 
 ![新增病例数7日均线-offset(25)](/img/2020-09-09-比特币vs美国新冠-offset-25.png)
 
-下图将呈色线调整为右移11天，使病例数最后一次爆发与币价契合。可以看出二者走势依然相似，未来几天币价下跌的可能较大。
+下图将橙色线调整为右移11天，使病例数最后一次爆发与币价契合。可以看出二者走势依然相似，未来几天币价下跌的可能较大。
 
 ![新增病例数7日均线-offset(11)](/img/2020-09-09-比特币vs美国新冠-offset-11.png)
 
