--- a/content/交易/比特币价格与美国每日新增确诊病例数.md
+++ b/content/交易/比特币价格与美国每日新增确诊病例数.md
@@ -41,6 +41,7 @@ plot(daily_new_case, title="daily new cases", color=color.orange, offset=os)    
 
 参考：
 
+- [Trends in Number of COVID-19 Cases and Deaths in the US Reported to CDC - CDC](https://covid.cdc.gov/covid-data-tracker/#trends_dailytrendscases)
 - [Daily New Cases in the United States - Worldometer](https://www.worldometers.info/coronavirus/country/us/)
 - [Coronavirus in the U.S.: Latest Map and Case Count - NYTimes](https://www.nytimes.com/interactive/2020/us/coronavirus-us-cases.html)
 - [Coronavirus (COVID-19) charts and stats - TradingView](https://www.tradingview.com/covid19/)
