--- a/content/交易/比特币价格与美国每日新增确诊病例数.md
+++ b/content/交易/比特币价格与美国每日新增确诊病例数.md
@@ -39,6 +39,14 @@ plot(daily_new_case, title="daily new cases", color=color.orange, offset=os)    
 
 ---
 
+更新（20201225）：
+
+几个数据源数据都不一样，TradingView 跟别的差得离谱。
+
+只能相互参考着看了。美国为什么这种数据都不一致？
+
+---
+
 参考：
 
 - [Trends in Number of COVID-19 Cases and Deaths in the US Reported to CDC - CDC](https://covid.cdc.gov/covid-data-tracker/#trends_dailytrendscases)
