--- a/content/交易/比特币价格与美国每日新增确诊病例数.md
+++ b/content/交易/比特币价格与美国每日新增确诊病例数.md
@@ -45,6 +45,8 @@ plot(daily_new_case, title="daily new cases", color=color.orange, offset=os)    
 
 只能相互参考着看了。美国为什么这种数据都不一致？
 
+傻逼TradingView！
+
 ---
 
 参考：
