--- a/content/琐事/买买买.md
+++ b/content/琐事/买买买.md
@@ -1,11 +1,11 @@
 ---
 title: "值不值得买"
 date: --------2020-11-28T06:45:00+08:00
-draft: true
+draft: false
 ---
 方便面：
 
-螺蛳粉：饭爷（好）| 好欢螺（好）| 李子柒（差）
+螺蛳粉：饭爷（好）| 好欢螺（好）| 李子柒（差）git pu
 
 速食：大同江小麦冷面（好）| 大同江炒年糕（中）| 方中山胡辣汤（？）
 
