--- a/content/交易/十四五规划带来的长线投资机会.md
+++ b/content/交易/十四五规划带来的长线投资机会.md
@@ -28,7 +28,7 @@ draft: false
 
 ---
 
-对国内旅游度假行业长期前景非常利好：
+对国内旅游度假行业长期前景有利：
 > 五.18 “完善节假日制度，落实带薪休假制度，扩大节假日消费。”
 >
 > 八.29 “逐步形成城市化地区、农产品主产区、生态功能区三大空间格局”
