--- a/content/琐事/买买买.md
+++ b/content/琐事/买买买.md
@@ -23,7 +23,7 @@ draft: false
 
 天猫精灵R: 毫无用处。[^1]
 
-有用杂项：强力磁铁、水能淹没小腿一大半的泰昌泡脚桶、松下电动理发器ER-CA70-W
+有用杂物：强力磁铁、水能淹没小腿一大半的泰昌泡脚桶、松下电动理发器ER-CA70-W
 
 [^1]: 最基础的闹钟都没做好。
 
