--- a/content/交易/灰度比特币持仓分析.md
+++ b/content/交易/灰度比特币持仓分析.md
@@ -11,7 +11,7 @@ draft: false
 - [x] OCR
 - [x] 检查数据（有无减仓）
 
-## 下载有数据的图片图片
+## 下载有数据的图片
 
 用谷歌浏览器在推特上搜索`from:grayscale Net Assets Under Management`，然后按“最新”。 或者直接点[这里](https://twitter.com/search?q=from%3Agrayscale%20Net%20Assets%20Under%20Management&src=typed_query&f=live)。
 
