--- a/content/交易/你不知道你，所以你是你[林广茂].md
+++ b/content/交易/你不知道你，所以你是你[林广茂].md
@@ -1,6 +1,7 @@
 ---
 title: "你不知道你，所以你是你[林广茂]"
 date: 2020-11-28T06:45:00+08:00
+author: "enel"
 draft: false
 ---
 原文：[你不知道你，所以你是你](http://blog.sina.com.cn/s/blog_7223e6ad0100q0ui.html)
