--- a/content/交易/比特币与各股市市值比较.md
+++ b/content/交易/比特币与各股市市值比较.md
@@ -1,6 +1,7 @@
 ---
 title: "比特币与各股市市值比较"
 date: 2020-11-06T11:07:26+08:00
+author: "enel"
 draft: false
 ---
 20201106，比特币市值0.2927万亿美元，加密货币总市值0.4460万亿美元，比特币占63.54%。[^1]
