--- a/content/交易/灰度比特币持仓分析.md
+++ b/content/交易/灰度比特币持仓分析.md
@@ -1,6 +1,7 @@
 ---
 title: "灰度比特币持仓分析"
 date: 2020-11-19T19:39:00+08:00
+author: "enel"
 draft: false
 ---
 灰度官方没有持仓曲线的数据，但会在推特上以图片方式更新其管理的净资产规模（Net Assets Under Management)。从2018年3月6日至今。
