--- a/content/日记本/无题.md
+++ b/content/日记本/无题.md
@@ -1,6 +1,7 @@
 ---
 title: "无题"
 date: 2020-04-17T20:10:10+08:00
+author: "sajiner"
 draft: false
 ---
 2018.04.14，奶奶去世了。2018.06.17，姥姥没了。2020.04.16，爷爷也走了。从此我将没有爷爷奶奶，直系亲属中只剩下爸妈和我的同辈...
