--- a/content/交易/十四五规划带来的长线投资机会.md
+++ b/content/交易/十四五规划带来的长线投资机会.md
@@ -1,6 +1,7 @@
 ---
 title: "十四五规划带来的长线投资机会"
 date: 2020-12-29T13:30:07+08:00
+author: "enel"
 draft: false
 ---
 > 145规划的解读，145带来的投资机会，可以是分析行业、可以是寻找长线机会。集思广益 [^1]
