--- a/content/食谱/味汆面基础教程.md
+++ b/content/食谱/味汆面基础教程.md
@@ -14,16 +14,17 @@ draft: false
 ## 步骤
 
 1. 腌肉丝
-① 肉片薄片，切细丝。
-② 加香油拌匀。
-③ 加醋、酱油、老抽、黄酒、盐、胡椒面，拌匀。
-④ 加花生油。
-⑤ 腌一会儿。 
+    1. 肉片薄片，切细丝。
+    2. 加香油拌匀。
+    3. 加醋、酱油、老抽、黄酒、盐、胡椒面，拌匀。
+    4. 加花生油。
+    5. 腌一会儿。
 2. 切葱丝姜丝蒜丝、香菜段。
-2. 煮面条，卧俩鸡蛋。撒上葱丝姜丝蒜丝
-3. 捞出面和鸡蛋。锅里水再烧开倒入腌肉丝，再开加醋。
-4. 肉煮熟带汤捞出，浇在面上。
-5. 再撒胡椒面。
+3. 煮面条，卧俩鸡蛋。撒上葱丝姜丝蒜丝
+4. 捞出面和鸡蛋。锅里水再烧开倒入腌肉丝，再开加醋。
+5. 肉煮熟带汤捞出，浇在面上。
+6. 再撒胡椒面。
 
 ## 后记
+
 2019.12.16 早上吃吐了。
