--- a/content/开发/小技巧.md
+++ b/content/开发/小技巧.md
@@ -21,7 +21,19 @@ draft: false
 ```
 
 ``` java
-/*-
+/*
+ *          0
+ *         /
+ *        1
+ *       / \
+ *      2   3
+ *     / \   \
+ *    4   5   6
+ */
+```
+
+``` java
+/***
  *          0
  *         /
  *        1
