--- a/content/琐事/云居山庆云禅寺禅修.md
+++ b/content/琐事/云居山庆云禅寺禅修.md
@@ -16,28 +16,31 @@ draft: false
 第二个原因是小时候家里堂屋正对着观音菩萨，堂屋两扇门右边那扇后面是财神爷。初一十五妈妈都烧香。
 
 21:00 之后登记、上交身份证、安排住处。坐了8个小时的车，身体不舒服，下次这样之前先吃个药，比如牛黄解毒片？保济丸？
-　
+
 住宿是八人间住了七个人，四个人打呼噜，四声道。被褥潮，有霉味（打坐的禅堂也有）。门外的灯透过窗子亮了一夜。
-　　
+
 4:30 起床参加早课，没有文本，不知道唱的什么，没法一起。
 
-6:30 吃早饭，八宝粥，馒头，**醋泡的姜，腌萝卜**，炒青菜，炒的笋，另一种咸菜，炒青椒，还有几样。好吃。
-　　
+6:30 吃早饭，八宝粥，馒头，**醋泡的姜，腌萝卜**，炒青菜，花生米，炒的笋，另一种咸菜，炒青椒，还有几样。好吃。
+
 9:30 开始上供。先绕着寺院的院子走了一圈，经过禅堂，很多座位上都有抽纸！上供的水果苹果橘子香蕉西瓜哈密瓜……看着流口水，后又上了几个菜，苹果雕（拼）的鸟、西瓜的摆盘等特别精致。双手合十时间长了，看别人磕头想鼓掌。
-　　
+
 文艺僧拍到许多素材。
-　　
+
 11:00 吃午饭。
-　　
+
 12:30 教行香、坐香。
+
 结束之后去了云居山真如寺，寺里有虚云纪念堂。
-　　
+
 17:20 回来起七。起七是打七的开场，由方丈主持。期间文艺僧给到了不少怼脸特写。起七第一次打坐坐得时间很长，一小时以上，数了620多息，非常难受。方丈下来走路也一瘸一瘸的。我穿的大褂厚，一身汗，后面行香时裆剌得慌。
 
 方丈讲，庆云禅寺的禅堂是在虚云和尚的住所遗址上修建的。
-　　
+
 十点左右解散，没洗澡，不方便，明天早上起来就洗。
-　　
+
+回来他们说禅堂吃的包子真好吃，柴禾烧的锅，……。其实我打水的时候，被人叫去搬了一大箱冻包子。
+
 不要忘了等义工伺候别人吃过早饭之后也吃过早饭之后我要拖地。
-　　
+
 现在趁四声道没凑齐，快睡啊！
