--- a/content/琐事/云居山庆云禅寺禅修.md
+++ b/content/琐事/云居山庆云禅寺禅修.md
@@ -11,7 +11,7 @@ draft: false
 
 4.30 12:45集合出发，21:00到，路上八个小时。
 
-路上想为什么会去庙里，喜欢打坐？接触到这些的原因可能有两个，最直接接触到打坐好像是因为高中时脖子疼，医院治不好就自己查怎么办。查到要锻炼，小燕飞八段锦六字诀之类的，接触到一些传统锻炼方法，后面发现是都跟道家有关系，然后就接触到了一些不用动的锻炼方法，比如真气运行法、站桩、打坐。佛道都打坐，就接触到佛教了。因为道观很少，所以寺庙去得相对多。但佛教对我来说臭规矩太多，无趣。
+路上想为什么会去庙里，喜欢打坐？接触到这些的原因可能有两个，最直接接触到打坐好像是因为高中时脖子疼，医院治不好就自己查怎么办。查到要锻炼，小燕飞八段锦六字诀之类的，接触到一些传统锻炼方法，后面发现是都跟道家有关系，然后就接触到了一些不用动的锻炼方法，比如真气运行法、站桩、打坐。佛道都打坐，就接触到佛教了。因为道观很少，所以寺庙去得相对多。但佛教对我来说规矩太多，无趣。
 
 第二个原因是小时候家里堂屋正对着观音菩萨，堂屋两扇门右边那扇后面是财神爷。初一十五妈妈都烧香。
 
