--- a/content/琐事/云居山庆云禅寺禅修.md
+++ b/content/琐事/云居山庆云禅寺禅修.md
@@ -44,3 +44,13 @@ draft: false
 不要忘了等义工伺候别人吃过早饭之后也吃过早饭之后我要拖地。
 
 现在趁四声道没凑齐，快睡啊！
+
+---
+
+**补：**
+
+早饭坐我左边的人，比别人见佛像拜得多，吃完早饭把擤鼻涕的卫生纸扔在了自己吃剩的菜汤里，三团。
+
+俩和尚对话，大概是:“……跟傻子一样。”；“但是定力好，这寺院里坐香最厉害……”。
+
+左边环跳硌着疼死了一直忍，忍到后来上嘴唇半边一直抽搐（跳），像呲牙。可能跟环跳没关系。
