Update and rename 云居山庆云禅寺禅修.md to 云居山庆云禅寺打七.md

--- a/content/琐事/云居山庆云禅寺打七.md
+++ b/content/琐事/云居山庆云禅寺打七.md
@@ -1,5 +1,5 @@
 ---
-title: "云居山庆云禅寺禅修"
+title: "云居山庆云禅寺打七"
 date: 2021-05-01T23:25:00+08:00
 author: "enel"
 draft: false
@@ -53,4 +53,4 @@ draft: false
 
 俩和尚对话，大概是:“……跟傻子一样。”；“但是定力好，这寺院里坐香最厉害……”。
 
-左边环跳硌着疼死了一直忍，忍到后来上嘴唇半边一直抽搐（跳），像呲牙。可能跟环跳没关系。
+左边环跳硌着疼死了一直忍，忍到后来上嘴唇左半边一直抽搐（跳），像呲牙。可能跟环跳没关系。
