--- a/content/琐事/云居山庆云禅寺打七.md
+++ b/content/琐事/云居山庆云禅寺打七.md
@@ -54,3 +54,11 @@ draft: false
 俩和尚对话，大概是:“……跟傻子一样。”；“但是定力好，这寺院里坐香最厉害……”。
 
 左边环跳硌着疼死了一直忍，忍到后来上嘴唇左半边一直抽搐（跳），像呲牙。可能跟环跳没关系。
+
+“解脱”念“xiè tuō”。
+
+禅堂咳嗽的人多，维那准备了药，说：“橘红治咳嗽”。
+
+演德和尚开示时说：“我们的目的是成佛。”
+
+去时 80kg 回来还剩 75kg。
