--- a/content/琐事/修炼.md
+++ b/content/琐事/修炼.md
@@ -11,7 +11,7 @@ draft: false
 
 **为什么要打坐？**
 
-他回答说《？经》上说打坐是最快/容易入定的方法。
+他回答说《？》上说打坐是最快/容易入定的方法，善知识的话要听。
 
 （这次打七时双盘盘不上，体重80kg，大腿围57cm，小腿肚子围41.5cm。等到能双盘时再量一次。）
 
