--- a/content/开发/小技巧.md
+++ b/content/开发/小技巧.md
@@ -2,9 +2,13 @@
 title: "小技巧"
 date: 2021-04-06T18:32:00+08:00
 author: "enel"
+tags: 
+    - "todo" 
 draft: false
 ---
 ## 避免格式化
+
+
 
 ``` java
 /**
@@ -96,3 +100,7 @@ int a =               1;
 参照 Intellij IDEA官方指南：[How to manage projects under Version Control Systems](https://intellij-support.jetbrains.com/hc/en-us/articles/206544839)来配置。
 
 可以用`.ignore`插件。
+
+## todo
+
+持续更新
