--- a/content/琐事/修炼.md
+++ b/content/琐事/修炼.md
@@ -2,6 +2,8 @@
 title: "修炼"
 date: 2021-05-11T18:41:00+08:00
 author: "enel"
+tags: 
+    - "todo"
 draft: false
 ---
 
@@ -44,5 +46,5 @@ draft: false
 - [ ] 读《起信论》
 - [ ] 读《瑜伽师地论》
 
-[^金刚经]: [《金刚经》注解](http://localhost:11687/%E7%90%90%E4%BA%8B/%E9%87%91%E5%88%9A%E7%BB%8F%E6%B3%A8%E8%A7%A3/)
-[^心经]:  [《心经》注解](http://localhost:11687/%E7%90%90%E4%BA%8B/%E5%BF%83%E7%BB%8F%E6%B3%A8%E8%A7%A3/)
+[^金刚经]: [《金刚经》注解](/%E7%90%90%E4%BA%8B/%E9%87%91%E5%88%9A%E7%BB%8F%E6%B3%A8%E8%A7%A3/)
+[^心经]:  [《心经》注解](/%E7%90%90%E4%BA%8B/%E5%BF%83%E7%BB%8F%E6%B3%A8%E8%A7%A3/)
