--- a/content/交易/打平所需胜率与波动比例的关系.md
+++ b/content/交易/打平所需胜率与波动比例的关系.md
@@ -1,7 +1,8 @@
 ---
 title: "打平所需胜率与波动比例的关系"
 date: 2020-01-09T00:03:26+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 假设每笔交易的盈利占开仓时净值的百分比是固定的，亏损时也是固定的。如每次盈利都赚10%，每次亏都亏5%。
