--- a/content/交易/苏宁易购技术分析+量子通讯[20200630].md
+++ b/content/交易/苏宁易购技术分析+量子通讯[20200630].md
@@ -1,7 +1,8 @@
 ---
 title: "苏宁易购技术分析+量子通讯[20200630]"
 date: 2020-06-30T22:17:25+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 ## 苏宁易购技术分析
