--- a/content/我如何克服对自我提升的痴迷【译】.md
+++ b/content/我如何克服对自我提升的痴迷【译】.md
@@ -1,7 +1,8 @@
 ---
 title: "我如何克服对自我提升的痴迷【译】"
 date: 2019-11-28T12:38:32+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 原作：[How I'm Overcoming My Obsession With Constant Self-improvement](https://www.fastcompany.com/3043543/how-im-overcoming-my-obsession-with-constant-self-improvement)
