--- a/content/日记本/云居山庆云禅寺.md
+++ b/content/日记本/云居山庆云禅寺.md
@@ -1,7 +1,8 @@
 ---
 title: "五一禅修"
 date: 2021-05-11T20:10:00+08:00
-author: "sajiner"
+authors:
+    - "sajiner"
 draft: false
 ---
 经朋友推荐，五一期间加入了他组织的禅修团队。禅修目的地：云居山庆云禅寺；禅修时间：5.1 - 5.5
