--- a/content/日记本/转产品了.md
+++ b/content/日记本/转产品了.md
@@ -1,7 +1,8 @@
 ---
 title: "转产品了"
 date: 2020-02-26T21:34:00+08:00
-author: "sajiner"
+authors:
+    - "sajiner"
 draft: false
 ---
 明天开始，要接触产品相关的工作了。
