--- a/content/琐事/云居山庆云禅寺打七.md
+++ b/content/琐事/云居山庆云禅寺打七.md
@@ -1,7 +1,8 @@
 ---
 title: "云居山庆云禅寺打七"
 date: 2021-05-01T23:25:00+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 时间：2021.5.1-5.5
