--- a/content/交易/做短线留不留隔夜单？（24小时交易的品种）.md
+++ b/content/交易/做短线留不留隔夜单？（24小时交易的品种）.md
@@ -1,7 +1,8 @@
 ---
 title: "做短线留不留隔夜单？（24小时交易的品种）"
 date: 2020-05-22T13:25:36+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 如果这个单子按照交易模型开平将会是赚的，那么以休息时间到了为理由平掉的话会，会产生两个坏的影响：
