--- a/content/交易/我的青春奉献给了期货 - 553.md
+++ b/content/交易/我的青春奉献给了期货 - 553.md
@@ -1,7 +1,8 @@
 ---
 title: "我的青春奉献给了期货 - 553"
 date: 2020-07-03T22:33:12+08:00
-author: "enel"
+authors:
+    - "enel"
 draft: false
 ---
 我的青春奉献给了期货 - 553
