--- a/content/日记本/为什么要写博客.md
+++ b/content/日记本/为什么要写博客.md
@@ -1,7 +1,8 @@
 ---
 title: "为什么要写博客"
 date: 2021-04-25T22:13:00+08:00
-author: "sajiner"
+authors:
+    - "sajiner"
 draft: false
 ---
 与老公恋爱 7 年，结婚 2 年多，没有孩子没养宠物，亲人朋友离得都远，加上又不善社交，我们的生活过的很是平淡，又加上对彼此的越来越了解，双方（非大事情上，男方的意见等于无）都认为，一直这样下去，太单一了，生活中要加点什么。加点什么呢？几经思考，双方一致认为写博客是都可以完成且能始终保持思想独立而又不会引起争执的事情，就这样，一拍即合，就有了乐土为家。
