--- a/content/交易/我的青春奉献给了期货 - 553.md
+++ b/content/交易/我的青春奉献给了期货 - 553.md
@@ -3,6 +3,8 @@ title: "我的青春奉献给了期货 - 553"
 date: 2020-07-03T22:33:12+08:00
 authors:
     - "enel"
+tags:
+    - "我的偶像553"
 draft: false
 ---
 我的青春奉献给了期货 - 553
