--- a/content/交易/中泰化学技术分析[20200531].md
+++ b/content/交易/中泰化学技术分析[20200531].md
@@ -3,6 +3,8 @@ title: "中泰化学技术分析[20200531]"
 date: 2020-05-31T19:55:50+08:00
 authors:
     - "enel"
+tags:
+    - "盒饭群作业"
 draft: false
 ---
 ## 月线图（对数）：
