--- a/content/交易/交易从亏损到盈利最需要什么如何才能够做到 - 553.md
+++ b/content/交易/交易从亏损到盈利最需要什么如何才能够做到 - 553.md
@@ -3,6 +3,8 @@ title: "交易从亏损到盈利最需要什么如何才能够做到 - 553"
 date: 2020-11-12T20:38:00+08:00
 authors:
     - "enel"
+tags:
+    - "我的偶像553"
 draft: false
 ---
 > [@桂西北小哥](https://weibo.com/u/3280586355) 2020-11-12 19:22
