corrected some errors of last post.

--- a/content/交易/股票必胜法.md
+++ b/content/交易/股票必胜法.md
@@ -8,7 +8,7 @@ tags:
 draft: false
 ---
 
-[这个版本](https://dramacool.bz/drama/the-greed-of-man.html)的字幕有英文，整理出来看能否帮助理解。
+[这个粤语版本](https://dramacool.bz/drama/the-greed-of-man.html)的字幕有英文，整理出来看能否帮助理解。
 
 “股票必胜法”原文在剧中出现了三次：
 
@@ -74,9 +74,9 @@ draft: false
 
 ## 第40集：陈涛涛重新排列后的
 
-    股市原意，乃让集资搜资（普通话版、粤语版旁白：投资）有其地，社会向荣，人皆有赚，惜人性贪婪，耗尽心思，巧取豪夺，乐土成炼狱，血雨腥风，杀戮不息。
+    股市原意，乃让集资搜资（旁白：投资）有其地，社会向荣，人皆有赚，惜人性贪婪，耗尽心思，巧取豪夺，乐土成炼狱，血雨腥风，杀戮不息。
     无数人荡产倾家（普通话版旁白：倾家荡产）输性命，胜者则丧良知人格，余于股坛数十载，未尝见一真正赢者（普通话版旁白：死者），智者应知此乃一处永无赢家之战场，取胜唯一法（普通话版旁白：方法）……
-    “及早离去”四字而矣（普通话版旁白：及早离去）！
+    “及早离去”四字而矣（旁白：及早离去）！
 
     The aim and purpose of the stock market is for fund raising
     To promote prosperity and profit sharing
