--- a/content/日记本/加薪申请.md
+++ b/content/日记本/加薪申请.md
@@ -3,7 +3,7 @@ title: "加薪申请"
 date: 2021-05-16T20:32:47+08:00
 authors:
     - "sajiner"
-draft: true
+draft: false
 ---
 ### 项目经历
 近半年来跟进了 30 多个项目，其中 **Plug&Play** 和 **Tuya Galaxy（Mesh 动态网关）** 均获得了公司如风奖。以下表格列出了几个较典型的项目
