--- a/content/开发/小技巧.md
+++ b/content/开发/小技巧.md
@@ -4,12 +4,10 @@ date: 2021-04-06T18:32:00+08:00
 authors:
     - "enel"
 tags: 
-    - "todo" 
+    - "持续更新中"
 draft: false
 ---
 ## 避免格式化
-
-
 
 ``` java
 /**
@@ -102,6 +100,43 @@ int a =               1;
 
 可以用`.ignore`插件。
 
-## todo
+## markdown 换行
 
-持续更新
+- `</br>`
+- 行尾加两个空格
+- 行尾加`\`
+
+## Windows Terminal 快捷键
+
+> `alt+shift++`：竖直分割窗口  
+> `alt+shift+-`：水平分割窗口  
+> `alt+↑/↓/←/→`：在窗口间移动焦点  
+> `alt+shift+↑/↓/←/→`：调整窗口大小
+
+## Linux(Ubuntu20.04下)
+
+tldr - Simplified and community-driven man pages
+htop - interactive process viewer
+tree - list contents of directories in a tree-like format
+which - locate a command
+type - Display the kind of command the shell will execute
+
+``` bash
+# 当前shell
+echo $0
+
+# 显示iptables的配置
+sudo iptables -L -n
+
+# 使修改后的`rules.v4`文件生效
+sudo iptables-restore < /etc/iptables/rules.v4
+
+# 已占用的网络端口（用sudo显示的不同）
+lsof -i
+
+# 占用80端口的
+lsof -i :80
+
+# 所有服务的状态
+sudo service --status-all
+```
