--- a/content/琐事/电脑和手机的配置.md
+++ b/content/琐事/电脑和手机的配置.md
@@ -67,6 +67,8 @@ Windows 10。
 [openSUSE Leap 15.2（WSL)](https://www.microsoft.com/en-us/p/opensuse-leap-152/9mzd0n9z4m4h?activetab=pivot:overviewtab)  
 [Steam](https://store.steampowered.com/)  
 [EasyBCD](https://neosmart.net/EasyBCD/)  
+[HandShaker](https://www.smartisan.com/apps/#/handshaker)  
+[LANDrop](https://landrop.app/)  
 
 ### Chrome {#Chrome}
 
