--- a/content/琐事/电脑和手机的配置.md
+++ b/content/琐事/电脑和手机的配置.md
@@ -139,18 +139,17 @@ chrome://flags/#enable-parallel-downloading     enabled
 
 {{<gallery>}}
 {{<figure src="/img/2021-05-27-launcher-1.webp" width="110px" caption="launcher-1">}}
-{{<figure src="/img/2021-05-27-launcher-1.webp" width="110px" caption-effect="none" caption="launcher-1">}}
-{{<figure src="/img/2021-05-27-launcher-2.webp" width="110px" caption-effect="none" caption="launcher-2">}}
-{{<figure src="/img/2021-05-27-launcher-3.webp" width="110px" caption-effect="none" caption="launcher-3">}}
-{{<figure src="/img/2021-05-27-launcher-4.webp" width="110px" caption-effect="none" caption="launcher-4">}}
-{{<figure src="/img/2021-05-27-launcher-5.webp" width="110px" caption-effect="none" caption="launcher-5">}}
-{{<figure src="/img/2021-05-27-launcher-6.webp" width="110px" caption-effect="none" caption="launcher-6">}}
-{{<figure src="/img/2021-05-27-launcher-7.webp" width="110px" caption-effect="none" caption="launcher-7">}}
-{{<figure src="/img/2021-05-27-launcher-8.webp" width="110px" caption-effect="none" caption="launcher-8">}}
-{{<figure src="/img/2021-05-27-launcher-9.webp" width="110px" caption-effect="none" caption="launcher-9">}}
-{{<figure src="/img/2021-05-27-launcher-zoom-out-1.webp" width="110px" caption-effect="none" caption="launcher-zoom-out-1">}}
-{{<figure src="/img/2021-05-27-launcher-zoom-out-2.webp" width="110px" caption-effect="none" caption="launcher-zoom-out-2">}}
-{{<figure src="/img/2021-05-27-launcher-zoom-out-3.webp" width="110px" caption-effect="none" caption="launcher-zoom-out-3">}}
+{{<figure src="/img/2021-05-27-launcher-2.webp" width="110px" caption="launcher-2">}}
+{{<figure src="/img/2021-05-27-launcher-3.webp" width="110px" caption="launcher-3">}}
+{{<figure src="/img/2021-05-27-launcher-4.webp" width="110px" caption="launcher-4">}}
+{{<figure src="/img/2021-05-27-launcher-5.webp" width="110px" caption="launcher-5">}}
+{{<figure src="/img/2021-05-27-launcher-6.webp" width="110px" caption="launcher-6">}}
+{{<figure src="/img/2021-05-27-launcher-7.webp" width="110px" caption="launcher-7">}}
+{{<figure src="/img/2021-05-27-launcher-8.webp" width="110px" caption="launcher-8">}}
+{{<figure src="/img/2021-05-27-launcher-9.webp" width="110px" caption="launcher-9">}}
+{{<figure src="/img/2021-05-27-launcher-zoom-out-1.webp" width="110px" caption="launcher-zoom-out-1">}}
+{{<figure src="/img/2021-05-27-launcher-zoom-out-2.webp" width="110px" caption="launcher-zoom-out-2">}}
+{{<figure src="/img/2021-05-27-launcher-zoom-out-3.webp" width="110px" caption="launcher-zoom-out-3">}}
 {{</gallery>}}
 {{<load-photoswipe>}}
 
