--- a/content/开发/小技巧.md
+++ b/content/开发/小技巧.md
@@ -140,3 +140,19 @@ lsof -i :80
 # 所有服务的状态
 sudo service --status-all
 ```
+
+## mongoDB
+
+``` bash
+# 查找content中包含“桂西北小哥”的
+db.weibo.find({content: {$regex : "桂西北小哥"}})
+```
+
+## crontab
+
+→ [Crontab.guru](https://crontab.guru/#*/6_*_*_*_*)
+
+``` bash
+# 每6分钟执行一次
+*/6 * * * * cd ~/weibo/weibo-crawler && python weibo.py
+```
