--- a/content/开发/小技巧.md
+++ b/content/开发/小技巧.md
@@ -113,13 +113,25 @@ int a =               1;
 > `alt+↑/↓/←/→`：在窗口间移动焦点  
 > `alt+shift+↑/↓/←/→`：调整窗口大小
 
+## Window10
+
+``` powershell
+# 显示powershell的代理配置
+netsh winhttp show proxy
+# 设置代理
+netsh winhttp set proxy "127.0.0.1:7890"
+# 访问网站，测试代理通不通
+Invoke-WebRequest http://google.com
+```
+
 ## Linux(Ubuntu20.04下)
 
-tldr - Simplified and community-driven man pages
-htop - interactive process viewer
-tree - list contents of directories in a tree-like format
-which - locate a command
-type - Display the kind of command the shell will execute
+tldr - Simplified and community-driven man pages  
+htop - interactive process viewer  
+tree - list contents of directories in a tree-like format  
+which - locate a command  
+type - Display the kind of command the shell will execute  
+exec - This causes the program that is currently being run by the calling process to be replaced with a new program,  with newly initialized stack, heap, and (initialized and uninitialized) data segments.  
 
 ``` bash
 # 当前shell
@@ -139,6 +151,18 @@ lsof -i :80
 
 # 所有服务的状态
 sudo service --status-all
+
+# 后台运行，终端关闭后会停止
+python weibo.py &
+
+# 后台运行，终端关闭后不会停止
+nohup python weibo.py &
+
+# 将标准输出重定向到a.txt 
+mongo >> a.txt
+
+# 将输出写入到标准输出和a.txt。`-a`是append
+mongo | tee -a a.txt
 ```
 
 ## mongoDB
